# jload

./: .gitignore  Makefile  Makefile.in  README.md  configure.ac  jload.c  linux.c  unknown.c
src/: Makefile.in  cpucount.c  cpucount.h  getload.c  getload.h  jload.c
